--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,25 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <Button
-        android:id="@+id/caream_but"
+    <com.ming.shao.kuling.widget.SideslipMenuLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="拍照" />
+        android:layout_height="match_parent"
+        android:scrollbars="none">
 
-    <Button
-        android:id="@+id/my_photo_but"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="自定义相册" />
-    <Button
-        android:id="@+id/photo_but"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="相册" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#000000"
+            android:orientation="horizontal">
+
+            <include layout="@layout/main_left_meun_layout"
+                />
+
+            <include layout="@layout/main_right_content_layout" />
+        </LinearLayout>
+
+
+    </com.ming.shao.kuling.widget.SideslipMenuLayout>
+
+
 </LinearLayout>
