提交自定义圆形头像和弹性的ScrollView的初步实现 “ git commit -m 提交自定义圆形头像和弹性的ScrollView的初步实实现 ssh -T git@github.com
git commit -m 提交自定义圆形头像和弹性的ScrollView的初步实现

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,10 +14,9 @@
             android:layout_height="match_parent"
             android:background="#000000"
             android:orientation="horizontal">
-
-            <include layout="@layout/main_left_meun_layout"
-                />
-
+            <!--左边菜单-->
+            <include layout="@layout/main_left_meun_layout" />
+            <!--右边内容-->
             <include layout="@layout/main_right_content_layout" />
         </LinearLayout>
 
