优化弹性ScrollView添加自定义tabView添加几个fragment

--- a/app/src/main/res/layout/main_left_meun_layout.xml
+++ b/app/src/main/res/layout/main_left_meun_layout.xml
@@ -56,6 +56,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="自定义相册" />
+            <Button
+                android:id="@+id/photo_but"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="相册" />
         </LinearLayout>
 
     </com.ming.shao.kuling.widget.ElasticScrollView>
