--- a/app/src/main/res/layout/main_right_content_layout.xml
+++ b/app/src/main/res/layout/main_right_content_layout.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
 
-    <android.support.v4.view.ViewPager
+    <com.ming.shao.kuling.widget.CustomViewPager
         android:id="@+id/content_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
